feat: support mcp approval #26